--- a/public/index.html
+++ b/public/index.html
@@ -35,26 +35,28 @@
   </nav>
 
 
-  <div class="home-container">
-    <header class="home-header">
-      <h1>Login To Chat</h1>
-    </header>
-    <main class="home-main">
-      <form class="login">
-        <div class="form-group">
-          <label for="username">Username:</label>
-          <br>
-          <input id="username" type="text" placeholder="Username">
-        </div>
-        <div class="form-group mt-3">
-          <label for="password">Password:</label>
-          <br>
-          <input id="password" type="password" placeholder="Password">
-        </div>
-      </form>
-      <button onClick="login()" type="submit" class="btn btn-info">Login</button>
-    </main>
-    <div id='errorBox' class="alert alert-danger d-none">Sorry! Your login was invalid!</div>
+  <div class="d-flex justify-content-center my-5 ">
+    <div class="home-container">
+      <header class="home-header">
+        <h1>Login To Chat</h1>
+      </header>
+      <main class="home-main">
+        <form class="login">
+          <div class="form-group">
+            <label for="username">Username:</label>
+            <br>
+            <input id="username" type="text" placeholder="Username">
+          </div>
+          <div class="form-group mt-3">
+            <label for="password">Password:</label>
+            <br>
+            <input id="password" type="password" placeholder="Password">
+          </div>
+        </form>
+        <button onClick="login()" type="submit" class="btn btn-info">Login</button>
+      </main>
+      <div id='errorBox' class="alert alert-danger d-none">Sorry! Your login was invalid!</div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
